<resources>
    <string name="app_name">Toplu Başlıklı SMS App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="action_settings">Settings</string>
    <string name="kalan_sms_10_000">Kalan SMS: 0.000</string>
    <string name="mert_karaden_z">Mert KARADENİZ</string>
    <string name="toplu_ba_l_kl_sms_g_nderme">Toplu Başlıklı SMS Gönderme</string>
    <string name="jmteknoloji_com">jmteknoloji.com</string>
    <string name="ana_menu">Diğer Kişiler</string>
    <string name="ba_l_kl_sms_g_nder">Başlıklı SMS Gönder</string>
    <string name="payla">Paylaş</string>
    <string name="sms_sat_n_al">SMS Satın Al</string>
    <string name="sosyal_medya">Sosyal Medya</string>
    <string name="takip">Takip</string>
    <string name="toplu_sms_g_nder">Toplu SMS Gönder</string>
    <string name="admin_paneli">Admin Paneli</string>
    <string name="genel_ayarlar">Genel Ayarlar</string>
    <string name="ki_ileri_senkronize_et">Kişileri Senkronize Et</string>
    <string name="sms_ayarlar">SMS Ayarları</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ogrenci_ekle">Öğrenci Ekle</string>
    <string name="ara">ARA</string>
    <string name="numara_ara">Numara Ara</string>
    <string name="sim_ya_da_numara_ile_ara">İsim ya da Numara ile Ara</string>
    <string name="title_activity_smsgonder">SMSGonderActivity</string>
    <string name="title_activity_kisi_sec">KisiSecActivity</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button">Button</string>
    <string name="title_activity_kisiler">KisilerActivity</string>
    <string name="title_activity_act_kayit_kisiler">ActKayitKisilerActivity</string>
    <string name="title_activity_act_kayit_duzenle">ActKayitDuzenleActivity</string>
    <string name="title_activity_activiyt_kisi_sec">ActiviytKisiSecActivity</string>
    <string name="se_ilenleri_onayla">Seçilenleri Onayla</string>

    <array name="basliklar">
        <item>ILETI MERKEZI</item>

    </array>
    <string name="title_activity_act_baslikli_login">ActBaslikliLogin</string>
</resources>
